# chess-punisher

./: .envrc  .gitignore  .gitignore.swp  Makefile  README.md  pyproject.toml  requirements.txt
configs/: dev.yaml  pi.yaml  sim.yaml
firmware/esp32_actuator/: README.md  platformio.ini
firmware/esp32_actuator/include/: protocol.h
firmware/esp32_actuator/src/: main.cpp
scripts/: actuator_probe.py  http_probe.py  move_harness.py  stockfish_smoke.py  vision_preview.py
src/chess_punisher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chess_punisher/actuation/: __init__.py  mqtt_adapter.py  mqtt_dispatcher.py  probe.py  protocol.py
src/chess_punisher/app/: main.py
src/chess_punisher/comms/: __init__.py  http_probe.py  punisher.py
src/chess_punisher/engine/: __init__.py  blunder_classifier.py  stockfish_engine.py
src/chess_punisher/logging/: __init__.py  game_logger.py
src/chess_punisher/observability/: __init__.py  logging.py
src/chess_punisher/orchestrator/: __init__.py  events.py  state_machine.py
src/chess_punisher/sim/: __init__.py  esp_sim.py
src/chess_punisher/vision/: __init__.py  preview.py
tests/: flow_test.py  lovelace_test.py  test_actuator_probe.py  test_blunder_classifier.py  test_http_probe.py  test_http_probe_env.py  test_mqtt_adapter.py  test_mqtt_dispatcher.py  test_observability_logging.py  test_protocol.py  test_simulated_punish_flow.py  test_state_machine.py
